Fix large leak in WebKitTestRunner https://bugs.webkit.org/show_bug.cgi?id=83084

Reviewed by Beth Dakin.

Fix a leak of the bimap backing store created when doing pixel and
ref tests. This leak was causing serious thrash on the test bots.

We don't need to allocate memory for CGBitmapContextCreate(); if we
pass NULL, it will allocate and manage its own backing store.

* WebKitTestRunner/cg/TestInvocationCG.cpp:
(WTR::createCGContextFromImage):

Canonical link: https://commits.webkit.org/100449@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@113101 268f45cc-cd09-0410-ab3c-d52691b4dbfc